<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/sign_up_header"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/imageViewHeader">

        <TextView
            android:id="@+id/textViewLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_title"
            android:textSize="24sp"
            android:layout_marginTop="32dp"/>

        <!-- Input fields and buttons go here -->

        <!-- Name Input Field -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <!-- Email Input Field -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <!-- Password Input Field -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <!-- Confirm Password Input Field -->
        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            android:layout_marginTop="24dp"
            android:background="@color/login_button_color"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"/>

        <!-- Link to Login Page -->
        <TextView
            android:id="@+id/textViewLinkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_already_have_account"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</RelativeLayout>