<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".barcode.BarcodeActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:font = "@font/sans_bold"
        android:text="@string/viewActivity"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp" />


    <TextView
        android:id="@+id/respeckConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/respeck_connection_status_disconnected"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/activityVisualRep"
        android:layout_width="wrap_content"
        android:layout_height="474dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/no_prediction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predictedActivity"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/breathing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predictedBreathing"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
