<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <!-- This ImageView acts as a header and should not overlap the content. -->
    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/login_in_header"
        android:scaleType="fitXY"
        android:transitionName="headerImage"
        android:layout_alignParentTop="true"/>

    <!-- The rest of the views will be laid out below the ImageView -->
    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewHeader"
        android:layout_centerHorizontal="true"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:layout_marginTop="32dp"/>


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewLoginTitle"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:text="@string/action_sign_in"
        android:background="@color/login_button_color"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"/>




    <!-- Continue with Google button -->
    <Button
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_google"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:drawablePadding="8dp"
        android:background="@android:color/transparent"/>


    <!-- Sign up text -->
    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_sign_up"
        android:layout_below="@id/buttonGoogleSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        />
</RelativeLayout>
