<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".live.LiveDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/app_blue"
        android:gravity="center_horizontal"
        android:text="@string/live_data"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/respeck_graphs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/thingy_graphs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respeck_live_accel_data"
            android:background="@drawable/app_text_container"
            android:textColor="@color/white"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/respeck_accel_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/respeck_graphs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/thingy_graphs"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_text_container"
            android:text="@string/respeck_gyro_chart"
            android:textColor="@color/white"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/respeck_gyro_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>